# borsa-analiz-bot

./: .env.example  .gitignore  CONTRIBUTING.md  HATA_RAPORU_KAPSAMLI_V7.md  HATA_RAPORU_V5_V7.md  KOD_ANALIZ_RAPORU_V7.md  LICENSE  README.md  analyze_v7_comprehensive.py  backtest_100coins.py  backtest_30days.py  backtest_90days.py  backtest_final.py  botu_baslat.bat  compare_3bots.py  config.yaml  config_v7.yaml  diagnose_signals.py  live_v5.py  live_v7.py  optimize_30days.py  pyproject.toml  requirements.txt  setup.py  test_ai_verifier.py
.mimocode/plans/: 1782749017036-neon-wizard.md
src/signal/: generator.py
src/strategy/: adaptive_learner.py  coin_quality_filter.py  v7_pa_strategy.py
src/utils/: telegram_notifier.py
