[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "borsa-analiz-bot"
version = "1.0.0"
description = "AI destekli borsa analiz ve trading botu"
readme = "README.txt"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "yasar-afk"}
]
dependencies = [
    "torch>=2.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta>=0.10.2",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "shap>=0.43.0",
    "optuna>=3.4.0",
    "statsmodels>=0.14.0",
    "hmmlearn>=0.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "openai>=1.30.0",
    "mplfinance>=0.12.0",
    "ccxt>=4.0.0",
    "requests>=2.31.0",
    "selenium>=4.0.0",
]

[project.scripts]
borsa-bot = "live_v7:main"
